--- a/.github/workflows/azure-deploy-and-test.yml
+++ b/.github/workflows/azure-deploy-and-test.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-          
+
       - name: Install dependencies
         shell: bash
         run: |
@@ -45,6 +45,8 @@ jobs:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
           package: .
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
 
   playwright-test:
     needs: build-and-deploy
