flex-consumption fix based on docs https://github.com/Azure/functions-action?tab=readme-ov-file#parameter-reference

--- a/.github/workflows/azure-deploy-and-test.yml
+++ b/.github/workflows/azure-deploy-and-test.yml
@@ -37,6 +37,8 @@ jobs:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
           package: .
           publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+          sku: flexconsumption
+          remote-build: true
 
   playwright-test:
     needs: build-and-deploy
