added rbac to azure on function deploy

--- a/.github/workflows/azure-deploy-and-test.yml
+++ b/.github/workflows/azure-deploy-and-test.yml
@@ -30,9 +30,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt --target=".python_packages/lib/site-packages"
 
-      - name: Azure Functions Action
+      - name: 'Log in to Azure with AZ CLI'
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }} # Required to log in with OIDC
+          tenant-id: ${{ vars.AZURE_TENANT_ID }} # Required to log in with OIDC
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }} # Required to log in with OIDC
+
+      - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
-        id: fa
         with:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
           package: .
