converted to secrets

--- a/.github/workflows/azure-deploy-and-test.yml
+++ b/.github/workflows/azure-deploy-and-test.yml
@@ -33,9 +33,9 @@ jobs:
       - name: 'Log in to Azure with AZ CLI'
         uses: azure/login@v2
         with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }} # Required to log in with OIDC
-          tenant-id: ${{ vars.AZURE_TENANT_ID }} # Required to log in with OIDC
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }} # Required to log in with OIDC
+          client-id: ${{ secrets.AZURE_CLIENT_ID }} # Required to log in with OIDC
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }} # Required to log in with OIDC
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} # Required to log in with OIDC
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
